# igris-memory

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  SECURITY.md  build.rs
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  homebrew.yml  release.yml
src/: cli.rs  db.rs  errors.rs  main.rs  models.rs  schema.rs  server.rs  sync.rs  topic.rs  utils.rs  validation.rs
src/db/: export.rs  mod.rs  observations.rs  purge.rs  search.rs  sessions.rs  timeline.rs
src/db/tests/: db_test.rs
src/http/: mod.rs  routes.rs
src/http/tests/: http_test.rs
src/models/: export.rs  mod.rs  observation.rs  session.rs  stats.rs
src/server/: args.rs  mod.rs
src/tests/: cli_test.rs  errors_test.rs  sync_test.rs  topic_test.rs  utils_test.rs  validation_test.rs
src/tui/: handler.rs  mod.rs  ui.rs
src/tui/tests/: tui_test.rs
