[package]
name = "igris-memory"
version = "0.1.1"
edition = "2024"
description = "Persistent memory server for AI coding agents"
license = "Elastic-2.0"
repository = "https://github.com/getigris/igris-memory"
homepage = "https://www.getigris.com"
readme = "README.md"
authors = ["Alexander Diaz <hello@getigris.com>"]
keywords = ["mcp", "ai", "memory", "agent", "sqlite"]
categories = ["development-tools", "command-line-utilities", "database"]

[[bin]]
name = "igmem"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
regex = "1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
clap = { version = "4.6.0", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
